--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,8 @@
 main {
+  display: flex;
+  flex-direction: column;
+  gap: 8rem;
+
   background-size: cover;
   background-repeat: no-repeat;
   background-color: var(--primary-100);
