--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,6 +1,10 @@
 .button {
-  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 
+  width: fit-content;
+  cursor: pointer;
   background-color: transparent;
 
   font-size: 1rem;
